syntax = "proto3";
package mindgraph;
option go_package = "github.com/itsp-pbl-2023/mind-graph/grpc/pb";

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}

service MindGraphService {
  rpc Hello(HelloRequest) returns (HelloResponse);
}
